Fixes in support ticket overflow, desktop gradients and shadows, setup control fiscal defaults

--- a/css/all-app.css
+++ b/css/all-app.css
@@ -1043,7 +1043,7 @@ div.dialog_head {
 }
 
 div.dialog_body {
-	padding: 8px 4px 16px 4px;
+	padding: 8px 8px 16px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;	
